# azure-manufacturing-intelligence-platform

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
configs/: azure_architecture.yaml  azure_architecture_ci.yaml  dashboard.yaml  dashboard_ci.yaml  forecasting.yaml  forecasting_ci.yaml  forecasting_extended.yaml  genai.yaml  genai_ci.yaml  ingestion.yaml  ingestion_ci.yaml  ingestion_forecasting.yaml  inventory.yaml  inventory_ci.yaml  maintenance.yaml  maintenance_ci.yaml  monitoring.yaml  monitoring_ci.yaml  platform.yaml  quality.yaml  quality_ci.yaml  release.yaml  release_ci.yaml  synthetic_data.yaml  synthetic_data_ci.yaml  synthetic_data_forecasting.yaml
dashboard/: README.md  dashboard_index.md  powerbi_ready_outputs.md  semantic_model_notes.md
data/: README.md
diagrams/: azure-data-flow.mmd  azure-genai-flow.mmd  azure-mlops-flow.mmd  azure-monitoring-flow.mmd  azure-reference-architecture.mmd  azure-security-boundary.mmd  data-lifecycle.mmd  high-level-platform-architecture.mmd
docs/: roadmap.md
infra/: README.md
outputs/: demand_forecast.csv  maintenance_predictions.json  quality_alerts.csv
reports/: azure_architecture_report.md  cv_project_summary.md  dashboard_output_report.md  data_quality_report.md  demand_forecasting_report.md  deployment_boundary_report.md  executive_manufacturing_brief.md  final_evidence_register.md  final_portfolio_summary.md  final_release_readiness_report.md  final_validation_report.md  genai_guardrails_report.md  genai_operations_assistant_report.md  interview_talking_points.md  (+12 more)
(+464 files in other folders)
