[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-manufacturing-intelligence-platform"
version = "0.1.0"
description = "Local-first Azure-mapped manufacturing operations and supply-chain intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Azure Manufacturing Intelligence Platform Contributors" }]
dependencies = [
  "numpy>=2.0,<3.0",
  "pandas>=2.0,<3.0",
  "PyYAML>=6.0.1,<7.0",
  "scikit-learn>=1.5,<2.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8.6,<1.0",
  "types-PyYAML>=6.0.12,<7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
manufacturing_intelligence = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=manufacturing_intelligence --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["manufacturing_intelligence"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
packages = ["manufacturing_intelligence"]
strict = true
warn_unused_configs = true
